# nitro_mail

./: .gitignore  Cargo.toml  README.md  build.rs
crates/directories/: Cargo.toml
crates/directories/src/: directory_type.rs  lib.rs
crates/directories/src/directory_service/: directory_service_directory.rs  mod.rs  packets.rs
crates/directory_sql/: Cargo.toml  README.md
crates/directory_sql/entities/: Cargo.toml
crates/directory_sql/entities/src/: lib.rs
crates/directory_sql/entities/src/account/: mod.rs
crates/directory_sql/entities/src/emails/: mod.rs
crates/directory_sql/entities/src/group_account_rels/: mod.rs
crates/directory_sql/entities/src/groups/: mod.rs
crates/directory_sql/entities/src/system_configuration/: mod.rs
crates/directory_sql/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230804_133020_system_configurations.rs
crates/directory_sql/src/: database_config.rs  database_directory.rs  database_tests.rs  main.rs
crates/helper_macros/: Cargo.toml
crates/helper_macros/src/: const_and_default_function.rs  current_semver.rs  lib.rs
crates/helper_macros/src/to_service_packet/: mod.rs  packet_variant.rs
crates/imap/: Cargo.toml
crates/nitro_mail/: Cargo.toml
crates/smtp/: Cargo.toml
crates/smtp/src/: lib.rs  smtp_client.rs  smtp_config.rs  smtp_listener.rs  smtp_service.rs
crates/storage_mail_directory/: Cargo.toml
crates/storages/: Cargo.toml
crates/storages/src/: lib.rs  storage_type.rs
crates/storages/src/storage_service/: mod.rs  packets.rs  storage_service_storage.rs
crates/test_directory/: Cargo.toml
crates/test_directory/directory_tests/: Cargo.toml
crates/test_directory/directory_tests/src/: main.rs
crates/test_directory/src/: main.rs  test_directory.rs
crates/utils/: Cargo.toml
crates/utils/src/: account.rs  common_types.rs  groups.rs  interprocess_guard.rs  lib.rs  service.rs  service_configuration.rs
crates/utils/src/chrono_serde/: duration.rs  mod.rs
crates/utils/src/configs/: dkim.rs  domain_configs.rs  mod.rs  type_or_path.rs
crates/utils/src/helper_types/: email_address.rs  mod.rs  optional_email.rs  password.rs
tests/: shared_constants.rs
