[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace=true}
serde= {workspace=true}
toml = {workspace=true}
sea-orm = {optional = true, version = "0.12"}
thiserror = {workspace=true}
strum = {workspace=true}
tracing = {workspace=true}
argon2 = "0.5"
rkyv = {workspace=true}
uuid = {workspace=true}
interprocess = {workspace=true}
rand = {workspace=true}
chrono = {workspace=true}
ahash = {workspace=true}
auto_impl = "1"
impl-tools = "0.9"
async-trait = {workspace=true}
futures = {workspace=true}