[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace=true}
serde= {workspace=true}

sea-orm = { version = "0.12", features = ["runtime-tokio-rustls","macros","sqlx-all"] }
sqlx = "0.7"

thiserror = {workspace=true}
utils = {path = "../../utils", features = ["sea-orm"]}
directories = {path="../../directories"}
tracing = {workspace=true}
anyhow = {workspace=true}
bytes = {workspace=true}
futures-lite = { workspace=true}
uuid = {workspace=true}
parking_lot = {workspace=true}
ahash = {workspace=true}
toml = {workspace=true}
tracing-subscriber = "0.3"
async-trait = {workspace=true}
strum = {workspace=true}

