[package]
name = "directory_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
serde= {workspace=true}
utils = {path = "../../utils"}
directories = {path="../../directories"}
tracing = {workspace=true}
anyhow = {workspace=true}
bytes = {workspace=true}
futures-lite = { workspace=true}
uuid = {workspace=true}
parking_lot = {workspace=true}
ahash = {workspace=true}
toml = {workspace=true}
tracing-subscriber = "0.3"